# We-Cut

./: .gitignore  .gitmodules  README.md
source/: CMakeLists.txt
source/src/: main.cpp
